# wh3

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md  agents.ndjson  characters.ndjson  factions.ndjson  frontend_faction_leaders.ndjson
src/wh3/: __init__.py  _consts.py  _core.py  _models.py  _schemas.py  cli.py  data.py  factions.py  lords.py  races.py
